--- a/index.html
+++ b/index.html
@@ -280,43 +280,28 @@
 
         </div>
     </section>
-    <section class="container home-news">
-        <h1>Новости</h1>
-        <div class="news-grid">
-            <div class="card">
-                <img src="media/home-newes1.png" alt="">
-                <span>24/04/2019</span>
-                <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
-                    сечения КО 100</p>
-                <a class="link link--arrowed" href="#">
-                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
-                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
-                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
-                        </g>
-                    </svg>
-                </a></div>
-            <div class="card">
-                <img src="" alt="">
-                <span>24/04/2019</span>
-                <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
-                    сечения КО 100</p>
-                <a class="link link--arrowed" href="">
-                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
-                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
-                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
-                        </g>
-                    </svg>
-                </a></div>
-            <div class="card-column">
-                <div class="card card-sm">
+    <section class="home-news">
+        <div class="container">
+            <h1>Новости</h1>
+            <div class="news-flex">
+                <div class="card">
                     <img src="media/home-newes1.png" alt="">
-                    <div>
-                        <span>24/04/2019</span>
-                        <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
-                            круглого сечения КО 100</p>
-                    </div>
+                    <span>24/04/2019</span>
+                    <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
+                        сечения КО 100</p>
+                    <a class="link link--arrowed" href="#">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </a></div>
+                <div class="card">
+                    <img src="" alt="">
+                    <span>24/04/2019</span>
+                    <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
+                        сечения КО 100</p>
                     <a class="link link--arrowed" href="">
                         <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                             <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
@@ -324,24 +309,41 @@
                                 <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
                             </g>
                         </svg>
-                    </a>
-                </div>
-                <div class="card card-sm">
-                    <!--                    <img src="" alt="">-->
-                    <div>
-                        <span>24/04/2019</span>
-                        <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
-                            круглого сечения КО 100</p>
+                    </a></div>
+                <div class="card-column">
+                    <div class="card-sm">
+                        <img src="media/home-newes1.png" alt="">
+                        <div>
+                            <span>24/04/2019</span>
+                            <p>ЧАО  "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
+                                круглого сечения КО 100</p>
+                        </div>
+                        <a class="link link--arrowed" href="">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </a>
                     </div>
+                    <div class="card-sm">
+                        <!--                    <img src="" alt="">-->
+                        <div>
+                            <span>24/04/2019</span>
+                            <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
+                                круглого сечения КО 100</p>
+                        </div>
 
-                    <a class="link link--arrowed" href="">
-                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
-                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
-                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
-                            </g>
-                        </svg>
-                    </a>
+                        <a class="link link--arrowed" href="">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
